crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__tstring.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
snapshot_kind: text
---
## Tokens
```
[
    TStringStart 0..2 (flags = DOUBLE_QUOTES | T_STRING),
    TStringMiddle 2..9 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 9..10,
    Name 10..13,
    Rbrace 13..14,
    TStringMiddle 14..27 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 27..28,
    Name 28..31,
    Rbrace 31..32,
    TStringMiddle 32..35 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 35..36,
    Name 36..41,
    Rbrace 41..42,
    TStringMiddle 42..44 (flags = DOUBLE_QUOTES | T_STRING),
    TStringEnd 44..45 (flags = DOUBLE_QUOTES | T_STRING),
    Newline 45..45,
]
```
