crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__tstring_comments.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
snapshot_kind: text
---
## Tokens
```
[
    TStringStart 0..4 (flags = DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | T_STRING),
    TStringMiddle 4..21 (flags = DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | T_STRING),
    Lbrace 21..22,
    Comment 23..34,
    NonLogicalNewline 34..35,
    Name 39..40,
    NonLogicalNewline 40..41,
    Rbrace 41..42,
    TStringMiddle 42..59 (flags = DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | T_STRING),
    TStringEnd 59..62 (flags = DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | T_STRING),
    Newline 62..62,
]
```
