crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__tstring_escape.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
snapshot_kind: text
---
## Tokens
```
[
    TStringStart 0..2 (flags = DOUBLE_QUOTES | T_STRING),
    TStringMiddle 2..3 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 3..4,
    Name 4..5,
    Colon 5..6,
    TStringMiddle 6..9 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 9..10,
    Name 10..11,
    Rbrace 11..12,
    Rbrace 12..13,
    TStringMiddle 13..24 (flags = DOUBLE_QUOTES | T_STRING),
    TStringEnd 24..25 (flags = DOUBLE_QUOTES | T_STRING),
    Newline 25..25,
]
```
