crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__tstring_escape_braces.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
snapshot_kind: text
---
## Tokens
```
[
    TStringStart 0..2 (flags = T_STRING),
    TStringMiddle 2..3 (flags = T_STRING),
    Lbrace 3..4,
    Name 4..7,
    Rbrace 7..8,
    TStringEnd 8..9 (flags = T_STRING),
    TStringStart 10..12 (flags = T_STRING),
    TStringMiddle 12..14 (flags = T_STRING),
    Lbrace 14..15,
    Name 15..18,
    Rbrace 18..19,
    TStringEnd 19..20 (flags = T_STRING),
    TStringStart 21..23 (flags = T_STRING),
    TStringMiddle 23..31 (flags = T_STRING),
    TStringEnd 31..32 (flags = T_STRING),
    TStringStart 33..35 (flags = T_STRING),
    TStringMiddle 35..44 (flags = T_STRING),
    TStringEnd 44..45 (flags = T_STRING),
    Newline 45..45,
]
```
