crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__tstring_escape_raw.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
snapshot_kind: text
---
## Tokens
```
[
    TStringStart 0..3 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_LOWERCASE),
    TStringMiddle 3..4 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_LOWERCASE),
    Lbrace 4..5,
    Name 5..6,
    Colon 6..7,
    TStringMiddle 7..10 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_LOWERCASE),
    Lbrace 10..11,
    Name 11..12,
    Rbrace 12..13,
    Rbrace 13..14,
    TStringMiddle 14..25 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_LOWERCASE),
    TStringEnd 25..26 (flags = DOUBLE_QUOTES | T_STRING | RAW_STRING_LOWERCASE),
    Newline 26..26,
]
```
