crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__tstring_multiline.snap
---
source: crates/ruff_python_parser/src/lexer.rs
expression: lex_source(source)
snapshot_kind: text
---
## Tokens
```
[
    TStringStart 0..4 (flags = DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | T_STRING),
    TStringMiddle 4..21 (flags = DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | T_STRING),
    TStringEnd 21..24 (flags = DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | T_STRING),
    TStringStart 25..29 (flags = TRIPLE_QUOTED_STRING | T_STRING),
    TStringMiddle 29..46 (flags = TRIPLE_QUOTED_STRING | T_STRING),
    TStringEnd 46..49 (flags = TRIPLE_QUOTED_STRING | T_STRING),
    TStringStart 50..52 (flags = DOUBLE_QUOTES | T_STRING),
    TStringMiddle 52..57 (flags = DOUBLE_QUOTES | T_STRING),
    Lbrace 57..58,
    TStringStart 58..62 (flags = DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | T_STRING),
    TStringMiddle 62..80 (flags = DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | T_STRING),
    Lbrace 80..81,
    Name 81..82,
    Rbrace 82..83,
    TStringEnd 83..86 (flags = DOUBLE_QUOTES | TRIPLE_QUOTED_STRING | T_STRING),
    Rbrace 86..87,
    TStringMiddle 87..94 (flags = DOUBLE_QUOTES | T_STRING),
    TStringEnd 94..95 (flags = DOUBLE_QUOTES | T_STRING),
    Newline 95..95,
]
```
